<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="browser">Browser</string>
    <string name="calc">Calculator</string>
    <string name="music">Music Player</string>
    <string name="play">Play</string>
    <string name="sensors">Sensors</string>
    <string name="string_play" />
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create new account</string>
    <string name="log_out">Log out</string>
    <string name="weather">Weather</string>
    <string name="yandex_map">Yandex.Map</string>
    <string name="unknown_error_message">Неизвестная ошибка</string>
    <string name="network_error_message">Проблемы с соединением</string>
    <string name="remote_error_message">Проблемы с поиском</string>
    <string name="history_delay">History Delay</string>

</resources>