<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_browser"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/browser" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/calc" />
        <item
            android:id="@+id/nav_music_player"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/music" />
        <item
            android:id="@+id/nav_sensors"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/sensors" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_history"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_weather"
            android:icon="?android:attr/textSelectHandle"
            android:title="@string/weather" />
    </group>
</menu>