<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_browser"
        android:name="ru.mirea.ivanov.mireaproject.ui.browser.BrowserFragment"
        android:label="@string/browser"
        tools:layout="@layout/fragment_browser" />

    <fragment
        android:id="@+id/nav_calculator"
        android:name="ru.mirea.ivanov.mireaproject.ui.calculator.CalculatorFragment"
        android:label="@string/calc"
        tools:layout="@layout/calculator_fragment" />

    <fragment
        android:id="@+id/nav_music_player"
        android:name="ru.mirea.ivanov.mireaproject.ui.musicplayer.MusicPlayerFragment"
        android:label="@string/music"
        tools:layout="@layout/fragment_music_player" />

    <fragment
        android:id="@+id/nav_sensors"
        android:name="ru.mirea.ivanov.mireaproject.ui.sensors.SensorsFragment"
        android:label="@string/sensors"
        tools:layout="@layout/fragment_sensors" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="ru.mirea.ivanov.mireaproject.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_history"
        android:name="ru.mirea.ivanov.mireaproject.ui.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_weather"
        android:name="ru.mirea.ivanov.mireaproject.ui.weather.WeatherFragment"
        android:label="@string/weather"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/nav_map"
        android:name="ru.mirea.ivanov.mireaproject.ui.map.YandexMapFragment"
        android:label="@string/yandex_map"
        tools:layout="@layout/fragment_yandex_map" />
</navigation>